--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="owlcarousel/libs/owlcarousel2/assets/owl.carousel.css">
     <link rel="stylesheet" href="owlcarousel/libs/owlcarousel2/assets/owl.theme.default.css">
@@ -259,19 +260,19 @@
                 </div>
             </div>
         </section>
-        <section class="test">
+        <section class="test  chack-list">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12  col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                         <div class="box">
                             <h3>Чек-лист мужского стиля</h3>
                             <p class="subtitle">Мы подготовили для вас онлайн-гид по подбору вашего личного образа</p>
                             <a href="#popup-form" class="popup-modal button-orange">Получить чек-лист</a>
                     </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12  col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-6  col-xs-12">
                         <div class="boxs">
-                            <img src="images/check.png" alt="">
+                            <img class="mt-50" src="images/check.png" alt="">
                         </div>
                     </div>
                     </div>
@@ -310,43 +311,6 @@
                     </div>
                 </div>
                 </div>
-        </section>
-       <section id="wear">
-         <div class="row">
-             <div class="banner-block">
-             <div class="box col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                 <a href="#">
-                     <img src="images/shoqan.jpg" alt="">
-                 </a>
-                 <a href="#">
-                     <img src="images/shoqan1.jpg" alt="">
-                 </a>
-             </div>
-             <div class="box col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                 <a href="#">
-                     <img src="images/shoqan2.jpg" alt="">
-                 </a>
-             </div>
-         </div>
-         </div>
-       </section>
-        <section class="test two">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12  col-xs-12">
-                        <div class="box">
-                            <h3>Пройдите тест и мы подберем Вам образ индивидуально</h3>
-                            <p class="subtitle">Укажите желаемые параметры костюма, бюджет и стиль и мы подготовим спецпредложение</p>
-                            <a class="button-orange" href="#">Начать тест</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12  col-xs-12">
-                        <div class="boxs">
-                            <img src="images/18.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
        <section id="about">
            <div class="container">
