--- a/contacts.html
+++ b/contacts.html
@@ -101,7 +101,7 @@
     </section>
     <section id="map">
        <div class="row justify-content-center">
-           <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
+           <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
                <div class="map">
                    <iframe src="https://yandex.ru/map-widget/v1/-/CGHlQGmm" width="100%" height="589" frameborder="1" allowfullscreen="true"></iframe>
                </div>
@@ -165,7 +165,8 @@
                         </div>
                 </div>
                 <div class="city-content panel">
-                    <div class="col">
+                    <div class="row">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGXVVQ2y" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>
                         <ul class="map-title">
                             <li>Тц Дордой плаза, 1-этаж</li>
@@ -177,7 +178,7 @@
                             <li>Консультация стилиста ✓</li>
                         </ul>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGXVbK8p" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>                               <ul class="map-title">
                         <li>Тц Азия Молл, 1-этаж</li>
                         <li>+996500700700,+996555550550</li>
@@ -187,10 +188,9 @@
                             <li>Корпоравтивный заказ ✓</li>
                             <li>Консультация стилиста ✓</li>
                         </ul>
-
+                    </div>
                     </div>
                 </div>
-
                 <div class="city accordion" >
                     <h2>Москва</h2>
                     <div class="plus">
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="city-content panel">
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGhYRI7T" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>
                         <ul class="map-title">
                             <li>Тц Цум, 2-этаж</li>
@@ -211,7 +211,7 @@
                             <li>Консультация стилиста ✓</li>
                         </ul>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGhYRV6q" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>                              <ul class="map-title">
                         <li>Тц Европейский,1-этаж</li>
                         <li>+7 (495) 921-34-44</li>
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <div class="city-content panel">
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGhYVIkw" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>
                         <ul class="map-title">
                             <li>Тц Les 4 Temps</li>
@@ -253,7 +253,7 @@
                     </div>
                 </div>
                 <div class="city-content panel">
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGhYVT3s" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>
                         <ul class="map-title">
                             <li>CityLife
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="city-content panel">
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGhYZKlp" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>
                         <ul class="map-title">
                             <li>Manhattan Mall 4-этаж</li>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="city-content panel">
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGhY6U3E" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>
                         <ul class="map-title">
                             <li>Beverly Center, 2-этаж</li>
@@ -317,7 +317,7 @@
                     </div>
                 </div>
                 <div class="city-content panel">
-                    <div class="col">
+                    <div class="col-sm-6 col-xs-12">
                         <iframe src="https://yandex.ru/map-widget/v1/-/CGhYZKlp" width="500" height="400" frameborder="1" allowfullscreen="true"></iframe>
                         <ul class="map-title">
                             <li>Manhattan Mall 4-этаж</li>
