--- a/wearcart.html
+++ b/wearcart.html
@@ -68,13 +68,13 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 images-box">
                    <div class="row" id="catalog">
-                       <div class="col-lg-3 col-md-3">
+                       <div class="col-lg-3 col-md-3 col-sm-3">
                                <div id="preview-box">
                                     <img  src="images/cart.jpg" alt="">
                                        <img  src="images/cart1.jpg" alt="">
                                            <img src="images/cart.jpg" alt=""></div>
                                </div>
-                       <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                       <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
                         <div id="item-full">
                                 <img  src="images/cart.jpg" alt="">
                         </div>
