--- a/contacts.html
+++ b/contacts.html
@@ -19,30 +19,16 @@
 </head>
 <body id="localstores">
 <header>
-    <div class="container">
-        <nav class="header d-flex align-items-center justify-content-between">
-            <a class="logo" href="index.html"><span>avenue</span> fashion</a>
-            <ul class="nav-items">
-                <li class="link"><a href="mens.html">Каталог</a></li>
-                <li class="link"><a href="aboutus.html">О нас</a></li>
-                <li class="link"><a href="thebrand.html">Бренд</a></li>
-                <li class="link"><a href="contacts.html">Контакты</a></li>
-            </ul>
-            <div class="cart">
-                <a href="#">
-                    <i class="icon-basket"></i>
-                </a>
-                <a href="signin.html">
-                    <i class="icon-user"></i>
-                </a>
-            </div>
-            <div class="burger-menu ">
-                <a href="#" class="burger-menu_button">
-                    <span class="burger-menu-lines"></span>
-                </a>
-                <nav class="burger-menu_nav">
-                    <a class="logo" href="index.html"><span>avenue</span> fashion</a>
-                    <div class="mobile-cart">
+    <div class="header-block">
+        <div class="header-top">
+            <div class="container">
+                <nav class="header d-flex align-items-center  justify-content-between ">
+                    <a class="logo" href="index.html"><span>Avenue</span> fashion</a>
+                    <div class="gender gender-lg">
+                        <a href="#">Мужчина</a>
+                        <a href="#">Женщина</a>
+                    </div>
+                    <div class="cart">
                         <a href="#">
                             <i class="icon-basket"></i>
                         </a>
@@ -50,15 +36,44 @@
                             <i class="icon-user"></i>
                         </a>
                     </div>
-                    <a href="mens.html" class="burger-menu_link">Каталог</a>
-                    <a href="aboutus.html" class="burger-menu_link">О нас</a>
-                    <a href="thebrand.html" class="burger-menu_link">Бренд</a>
-                    <a href="contacts.html" class="burger-menu_link">Контакты</a>
-                </nav>
-                <div class="burger-menu_overlay">
+                    <div class="burger-menu ">
+                        <a href="#" class="burger-menu_button">
+                            <span class="burger-menu-lines"></span>
+                        </a>
+                        <nav class="burger-menu_nav">
+                            <a class="logo" href="index.html"><span>avenue</span> fashion</a>
+                            <div class="mobile-cart">
+                                <a href="#">
+                                    <i class="icon-basket"></i>
+                                </a>
+                                <a href="signin.html">
+                                    <i class="icon-user"></i>
+                                </a>
+                            </div>
+                            <div class="gender">
+                                <a href="#">Мужчина</a>
+                                <a href="#">Женщина</a>
+                            </div>
+                            <a href="mens.html" class="burger-menu_link">Каталог</a>
+                            <a href="aboutus.html" class="burger-menu_link">О нас</a>
+                            <a href="individual.html" class="burger-menu_link">Инд.пошив</a>
+                            <a href="contacts.html" class="burger-menu_link">Контакты</a>
+                        </nav>
+                        <div class="burger-menu_overlay">
 
-                </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
+        </div>
+
+        <nav class="nav-menu mt-20">
+            <ul class="nav-items d-flex">
+                <li class="link"><a href="mens.html">Коллекция</a></li>
+                <li class="link"><a href="aboutus.html">О нас</a></li>
+                <li class="link"><a href="individual.html">Индивидуальный пошив</a></li>
+                <li class="link"><a href="contacts.html">Контакты</a></li>
+            </ul>
         </nav>
     </div>
 </header>
