--- a/individual.html
+++ b/individual.html
@@ -19,85 +19,66 @@
 </head>
 <body>
 <header>
-    <div class="container">
-        <nav class="header">
-            <a class="logo" href="index.html"><span>avenue</span> fashion</a>
-            <ul class="nav-items">
-                <li class="link"><a href="mens.html">Каталог</a></li>
+    <div class="header-block">
+        <div class="header-top">
+            <div class="container">
+                <nav class="header d-flex align-items-center  justify-content-between ">
+                    <a class="logo" href="index.html"><span>Avenue</span> fashion</a>
+                    <div class="gender gender-lg">
+                        <a href="#">Мужчина</a>
+                        <a href="#">Женщина</a>
+                    </div>
+                    <div class="cart">
+                        <a href="#">
+                            <i class="icon-basket"></i>
+                        </a>
+                        <a href="signin.html">
+                            <i class="icon-user"></i>
+                        </a>
+                    </div>
+                    <div class="burger-menu ">
+                        <a href="#" class="burger-menu_button">
+                            <span class="burger-menu-lines"></span>
+                        </a>
+                        <nav class="burger-menu_nav">
+                            <a class="logo" href="index.html"><span>avenue</span> fashion</a>
+                            <div class="mobile-cart">
+                                <a href="#">
+                                    <i class="icon-basket"></i>
+                                </a>
+                                <a href="signin.html">
+                                    <i class="icon-user"></i>
+                                </a>
+                            </div>
+                            <div class="gender">
+                                <a href="#">Мужчина</a>
+                                <a href="#">Женщина</a>
+                            </div>
+                            <a href="mens.html" class="burger-menu_link">Каталог</a>
+                            <a href="aboutus.html" class="burger-menu_link">О нас</a>
+                            <a href="individual.html" class="burger-menu_link">Инд.пошив</a>
+                            <a href="contacts.html" class="burger-menu_link">Контакты</a>
+                        </nav>
+                        <div class="burger-menu_overlay">
+
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
+        <nav class="nav-menu mt-20">
+            <ul class="nav-items d-flex">
+                <li class="link"><a href="mens.html">Коллекция</a></li>
                 <li class="link"><a href="aboutus.html">О нас</a></li>
-                <li class="link"><a href="thebrand.html">Бренд</a></li>
+                <li class="link"><a href="individual.html">Индивидуальный пошив</a></li>
                 <li class="link"><a href="contacts.html">Контакты</a></li>
             </ul>
-            <div class="cart">
-                <a href="#">
-                    <i class="icon-basket"></i>
-                </a>
-                <a href="signin.html">
-                    <i class="icon-user"></i>
-                </a>
-            </div>
-            <div class="mobile-btn">
-                <span class="m-line"></span>
-                <span class="m-line"></span>
-                <span class="m-line"></span>
-            </div>
         </nav>
     </div>
 </header>
 <main>
-    <section id="local">
-        <div class="local" style="background: url(images/thebrand.png) no-repeat center center"></div>
-    </section>
-   <section id="brand">
-       <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
-                <div class="brand-item">
-                    <div class="brand-img">
-                        <img src="images/brand1.png"  alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-8 col-sm-12 col-xs-12">
-                <div class="brand-item">
-                    <div class="brand-text">
-                        <h3>hand designed clothing</h3>
-                        <p>established in 2013, avenue fashion Sed dictum elit vel sapien luctus eras</p>
-                        <span>Praesent feugiat malesuada tristique maecenas rhoncus diam eget quam vestibulim consectetur, id condimentum leo porttitor. Cum sociis natoque penatibus eta magnis
-                       isut parturient montes, nascetur ridiculus mus. Donec sem lorem laoreet tempor un risus vitae,
-                       rutrum sodales nibh suspendisse congue metus nunc, id viverra elit loreti rhoncus quis consecteur es.
-                       Donec pulvinar tempor lorem a pretium justo interdum.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-            <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12">
-                <div class="brand-item">
-                    <div class="brand-img"><img src="images/brand3.png"  alt=""></div>
-                    <div class="brand-text">
-                        <h3>ur values, vision and strategy</h3>
-                        <p>The above image would be a great place for an advertising video</p>
-                        <span>Cras maximus venenatis malesuada. Nulla sagittis elit felis, ac facilisis quam ornare aliquam. Etiam cursus odio vitae dui dignissim, sed tempus lacus tincidunt et donec sapien velit, rhoncus eu nulla a, molestie tempus mi maecenas sagittis ornare.
-Pellentesque sapien mi, <span>tincidunt nec magna vitae</span>, volutpat elementum odioni lorem Aliquam tempor massa vitae augue mattis tempor id in ante ut augue erat, luctus eil.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12">
-                <div class="brand-item">
-                    <div class="brand-img"><img src="images/brand2.png"  alt=""></div>
-                    <div class="brand-text">
-                        <h3>Ethical trading</h3>
-                        <p>we oversee the working conditions of the people in the supply chain</p>
-                        <span>Nullam dapibus consectetur neque, faucibus porttitor purus iaculis sed. Aenean eras dapibus augue, eget dignissim dui maecenas et rhoncus mim, vel semper arcu lorem
-Pellentesque congue justo esteir pellentesque aliquet massa eget posuere tincidunt. Cras viverra ullamcorper nunc accumsan hendrerit. <span>A link <i class=""></i></span></span>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </div>
-       </div>
-       </div>
+
    </section>
     <section id="info">
         <div class="container">
