--- a/mens.html
+++ b/mens.html
@@ -17,32 +17,18 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800|Roboto:300,400,500,700,900&display=swap"
           rel="stylesheet">
 </head>
-<body>
+<body >
 <header>
-    <div class="container">
-        <nav class="header d-flex align-items-center justify-content-between">
-            <a class="logo" href="index.html"><span>avenue</span> fashion</a>
-            <ul class="nav-items">
-                <li class="link"><a href="mens.html">Каталог</a></li>
-                <li class="link"><a href="aboutus.html">О нас</a></li>
-                <li class="link"><a href="thebrand.html">Бренд</a></li>
-                <li class="link"><a href="contacts.html">Контакты</a></li>
-            </ul>
-            <div class="cart">
-                <a href="#">
-                    <i class="icon-basket"></i>
-                </a>
-                <a href="signin.html">
-                    <i class="icon-user"></i>
-                </a>
-            </div>
-            <div class="burger-menu ">
-                <a href="#" class="burger-menu_button">
-                    <span class="burger-menu-lines"></span>
-                </a>
-                <nav class="burger-menu_nav">
-                    <a class="logo" href="index.html"><span>avenue</span> fashion</a>
-                    <div class="mobile-cart">
+    <div class="header-block">
+        <div class="header-top">
+            <div class="container">
+                <nav class="header d-flex align-items-center  justify-content-between ">
+                    <a class="logo" href="index.html"><span>Avenue</span> fashion</a>
+                    <div class="gender gender-lg">
+                        <a href="#">Мужчина</a>
+                        <a href="#">Женщина</a>
+                    </div>
+                    <div class="cart">
                         <a href="#">
                             <i class="icon-basket"></i>
                         </a>
@@ -50,15 +36,44 @@
                             <i class="icon-user"></i>
                         </a>
                     </div>
-                    <a href="mens.html" class="burger-menu_link">Каталог</a>
-                    <a href="aboutus.html" class="burger-menu_link">О нас</a>
-                    <a href="thebrand.html" class="burger-menu_link">Бренд</a>
-                    <a href="contacts.html" class="burger-menu_link">Контакты</a>
-                </nav>
-                <div class="burger-menu_overlay">
+                    <div class="burger-menu ">
+                        <a href="#" class="burger-menu_button">
+                            <span class="burger-menu-lines"></span>
+                        </a>
+                        <nav class="burger-menu_nav">
+                            <a class="logo" href="index.html"><span>avenue</span> fashion</a>
+                            <div class="mobile-cart">
+                                <a href="#">
+                                    <i class="icon-basket"></i>
+                                </a>
+                                <a href="signin.html">
+                                    <i class="icon-user"></i>
+                                </a>
+                            </div>
+                            <div class="gender">
+                                <a href="#">Мужчина</a>
+                                <a href="#">Женщина</a>
+                            </div>
+                            <a href="mens.html" class="burger-menu_link">Каталог</a>
+                            <a href="aboutus.html" class="burger-menu_link">О нас</a>
+                            <a href="individual.html" class="burger-menu_link">Инд.пошив</a>
+                            <a href="contacts.html" class="burger-menu_link">Контакты</a>
+                        </nav>
+                        <div class="burger-menu_overlay">
 
-                </div>
+                        </div>
+                    </div>
+                </nav>
             </div>
+        </div>
+
+        <nav class="nav-menu mt-20">
+            <ul class="nav-items d-flex">
+                <li class="link"><a href="mens.html">Коллекция</a></li>
+                <li class="link"><a href="aboutus.html">О нас</a></li>
+                <li class="link"><a href="individual.html">Индивидуальный пошив</a></li>
+                <li class="link"><a href="contacts.html">Контакты</a></li>
+            </ul>
         </nav>
     </div>
 </header>
@@ -115,7 +130,78 @@
             </div>
         </div>
     </section>
-    <section id="mens-wear">
+    <section id="collection-сlothes">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="box">
+                        <a href="black-edition.html">
+                            <img src="images/1-Looks-Hero.jpg" alt="">
+                        </a>
+                        <h2 class="title" >
+                            ОСЕННЕ-ЗИМНЯЯ КОЛЛЕКЦИЯ 2020
+                        </h2>
+                    <p class="subtitle">
+                        Осенне-зимняя коллекция 2020 года стала
+                        плодом динамичного взаимодействия. Она сочетает в себе традиции
+                        портного дела и современный непринужденный стиль, дух деловых переговоров
+                        и мгновения беззаботного отдыха. Тандем технологий и концепции soft-wear
+                        стал значимым событием в эволюции мужской моды. Суть soft-wear заключается
+                        в сочетании классических элементов мужского костюма
+                        с тенденциями стиля кэжуал, которые отражаются в способе шитья, выборе материалов, фасонов и узоров.
+                    </p>
+                     <div class="look">
+                    <a href="black-edition.html">
+                        Показать еще
+                    </a>
+                     </div>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="box mt-50">
+                        <a href="collections.html">
+                            <img src="images/2Hero.jpg" alt="">
+                        </a>
+                        <h2 class="title">
+                            ВОСПОМИНАНИЯ О ЛЕТЕ
+                        </h2>
+                        <p class="subtitle">
+                            Весенне-летняя коллекция Avenue 2020 года
+                            навевает воспоминания о чудесном лете в Италии.
+                            Пейзажи, мелодии песен и воспоминания об ароматах – все это пронизывает разум атмосферой безмятежности и расслабленности,
+                            которая ненавязчиво сглаживает различия между строгой и спортивной одеждой.
+                        </p>
+                        <div class="look">
+                            <a href="collections.html">
+                                Показать еще
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="box mt-50">
+                        <a href="collections.html">
+                            <img src="images/hero_copia.jpg" alt="">
+                        </a>
+                        <h2 class="title">
+                            BLACK EDITION: БЛАГОРОДСТВО ЧЕРНОГО
+                        </h2>
+                        <p class="subtitle">
+                            Капсульная коллекция Black Edition от Avenue – это сочетание плавных силуэтов,
+                            функциональных деталей и безграничного воображения. Линейка современной спортивной одежды – это новое направление стиля, где во главу угла возведено удобство. В капсульной коллекции представлены некоторые предметы одежды, являющиеся обязательными элементами стиля «городской шик», которые идеально вписываются в образ жизни молодого и энергичного мужчины, настоящего гражданина мира. В коллекции преобладают черно-серые оттенки, соответствующие минималистичной цветовой палитре нового городского костюма. В то же время в одежде было использовано творческое решение нового стилистического направления – надпись Avenue
+                            в виде буквенных узоров и в форме рельефного жаккардового плетения.
+                        </p>
+                        <div class="look">
+                            <a href="collections.html">
+                                Показать еще
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+   <!-- <section id="mens-wear">
         <div class="row containerProducts d-flex">
             <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
                 <div class="box">
@@ -398,7 +484,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <section id="info">
         <div class="container">
             <div class="bottom-menu">
